[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_fishball0741"
version = "0.0.1"
authors = [
  { name="Wing Man SIU", email="fishball0741@gmail.com" },
]
description = "Zombie Turn-based game"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"